--- a/seating.html
+++ b/seating.html
@@ -8,7 +8,7 @@
 <body style="text-align:center; font-family:Arial, sans-serif;">
   <h1>Wedding Seating Chart</h1>
 
-  <!-- Seating chart image -->
+  <!-- PNG seating chart -->
   <img src="seating_chart.png" alt="Seating Chart" style="max-width:100%; height:auto;">
 
   <br><br>
