--- a/index3.html
+++ b/index3.html
@@ -21,8 +21,8 @@ td{padding:6px 8px;border-bottom:1px solid #eee;}
   padding: 12px 20px;
   font-size: 16px;
   font-weight: bold;
-  color: white;
-  background: linear-gradient(135deg, #ff99cc, #ff66b2);
+  color: black;
+  background: linear-gradient(135deg, #f7d8c3, #f7d683);
   border: none;
   border-radius: 50px;
   text-decoration: none;
@@ -44,8 +44,8 @@ td{padding:6px 8px;border-bottom:1px solid #eee;}
   <div class="small">Type your full name (or part of it). Matching is case-insensitive.</div>
   <input id="search" placeholder="Search name..." autofocus />
 
-<a href="seating_chart.png" target="_blank" class="wedding-button">
-  💒 View Seating Chart <span>💕</span>
+<a href="seating.html" class="wedding-button">
+  View Seating Chart <span>💕</span>
 </a>
 
   <div id="result" class="result"></div>
