--- a/seating.html
+++ b/seating.html
@@ -49,13 +49,13 @@
       <button id="backBtn" class="wedding-button" aria-label="Return to search">⬅ Return to Search</button>
 
       <!-- Open full image in new tab (optional) -->
-      <a href="seating_chart.png" target="_blank" rel="noopener" class="wedding-button">Open Full Image ↗</a>
+      <a href="https://katherinechoy.github.io/wedding-seating/seating_chart.png" target="_blank" rel="noopener" class="wedding-button">Open Full Image ↗</a>
     </div>
 
     <!-- Seating image -->
     <div class="img-wrap">
       <a href="seating_chart.png" target="_blank" rel="noopener">
-        <img src="seating_chart.png" alt="Seating Chart">
+        <img src="https://katherinechoy.github.io/wedding-seating/seating_chart.png" alt="Seating Chart">
       </a>
     </div>
 
