--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ td{padding:6px 8px;border-bottom:1px solid #eee;}
   font-size: 16px;
   font-weight: bold;
   color: black;
-  background: linear-gradient(135deg, #f7d8c3, #f7d683);
+  background: linear-gradient(135deg, #ffdbe1, #ffd4d4);
   border: none;
   border-radius: 50px;
   text-decoration: none;
