--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     :root {
-      --primary-color: #ff9bb2;           /* 主粉 */
+      --primary-color: #ffe6e6;           /* 主粉 */
       --secondary-color: #ffe6ec;         /* 淡粉背景 */
       --accent-color: #ffd4d4;             /* 渐层粉 */
       --light-color: #fff5f7;              /* 更淡粉 */
-      --text-color: #5a4c4c;               /* 柔棕色文字 */
+      --text-color: #101012;               /* 柔棕色文字 */
       --shadow-color: rgba(90, 76, 76, 0.1);
     }
 
@@ -34,7 +34,7 @@
 
     .header {
       width: 100%;
-      background: linear-gradient(135deg, #ffdbe1, #ffd4d4);
+      background: linear-gradient(135deg, #f2dada, #e6bebe);
       padding: 25px;
       text-align: center;
       box-shadow: 0 4px 12px var(--shadow-color);
@@ -181,8 +181,8 @@
   padding: 0 8px;         /* 内边距可扩张圆形 */
 
   border-radius: 50%;     
-  background: #ffb6c1;    /* 粉红背景 */
-  color: #fff;             /* 字体颜色 */
+  background: #ffe6e6;    /* 粉红背景 */
+  color: #101012;             /* 字体颜色 */
   font-weight: bold;
   font-size: 14px;
   text-align: center;
@@ -195,7 +195,7 @@
 
     .table-number {
       background-color: var(--primary-color);
-      color: #fff;
+      color: #101012;
     }
 
     .no-table {
@@ -579,6 +579,7 @@
 <tr><td class="name">翟家隆先生</td><td class="table">18</td></tr>
 <tr><td class="name">蔡明光先生</td><td class="table">69</td></tr>
 <tr><td class="name">林玉珠女士</td><td class="table">69</td></tr>
+<tr><td class="name">黄聪荣夫妇</td><td class="table">60</td></tr>
       </tbody>
     </table>
   </div>
