--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     .header {
       width: 100%;
-      background: linear-gradient(135deg, #f2dada, #e6bebe);
+      background: linear-gradient(135deg, #f2dada, #fce6e6);
       padding: 25px;
       text-align: center;
       box-shadow: 0 4px 12px var(--shadow-color);
