--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 
     <div id="result" class="result">
       <div class="result-header">
-        <div style="font-weight: 500; color: var(--primary-color);">
+        <div style="font-weight: 500;">
           <i class="fas fa-users"></i> All Guests
         </div>
         <div style="font-size: 14px;">
