--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       font-weight: 600;
       color: #5a4c4c;
       background: linear-gradient(135deg, #ffdbe1, #ffd4d4);
-      border: none;
+     border: 2px solid #635e53;
       border-radius: 50px;
       text-decoration: none;
       box-shadow: 0 4px 10px var(--shadow-color);
@@ -206,7 +206,7 @@
     .floral-divider {
       text-align: center;
       margin: 25px 0;
-      color: var(--primary-color);
+      color: #db145d;
       font-size: 24px;
     }
 
@@ -287,7 +287,7 @@
 <tr><td class="name">MR. TERENCE KUAN</td><td class="table">52</td></tr>
 <tr><td class="name">MS. JO CHAN &amp; PARTNER</td><td class="table">25</td></tr>
 <tr><td class="name">MS. JENIX &amp; PARTNER</td><td class="table">25</td></tr>
-<tr><td class="name">MR &amp; MRS JAVIEN HOONG</td><td class="table">56</td></tr>
+<tr><td class="name">MR &amp; MRS JAVIEN HOONG</td><td class="table">12</td></tr>
 <tr><td class="name">MR. DEEPUGH &amp; GIRLFRIEND</td><td class="table">55</td></tr>
 <tr><td class="name">MR. JAYSON BONG</td><td class="table">53</td></tr>
 <tr><td class="name">MR. EDWIN</td><td class="table">56</td></tr>
@@ -320,7 +320,7 @@
 <tr><td class="name">MS. LILY TAN</td><td class="table">13</td></tr>
 <tr><td class="name">MS. JOANNA YONG</td><td class="table">13</td></tr>
 <tr><td class="name">MR &amp; MRS. LIM KIM LIN</td><td class="table">26</td></tr>
-<tr><td class="name">MS. JOANNE LAI</td><td class="table">60</td></tr>
+<tr><td class="name">MS. JOANNE LAI</td><td class="table">56</td></tr>
 <tr><td class="name">MR &amp; MRS. CASSIDY KHOO</td><td class="table">59</td></tr>
 <tr><td class="name">LO CHIN TUCK &amp; SIBLINGS</td><td class="table">1</td></tr>
 <tr><td class="name">陈凯文夫妇</td><td class="table">31</td></tr>
@@ -414,6 +414,7 @@
 <tr><td class="name">MR. LIM CHUN TAK</td><td class="table">68</td></tr>
 <tr><td class="name">MR. YONG LE</td><td class="table">68</td></tr>
 <tr><td class="name">MR. YWEI</td><td class="table">68</td></tr>
+<tr><td class="name">MR. TAN ZHANG HAO</td><td class="table">56</td></tr>
 <tr><td class="name">MR. CHONG JIA XIAN</td><td class="table">56</td></tr>
 <tr><td class="name">MR. IVAN CHOO</td><td class="table">56</td></tr>
 <tr><td class="name">MR FELIX EE &amp; GIRLFRIEND</td><td class="table">56</td></tr>
@@ -549,6 +550,7 @@
 <tr><td class="name">陳錦祥夫妇</td><td class="table">19</td></tr>
 <tr><td class="name">MR. &amp; MRS. TANG JIA YAO</td><td class="table">39</td></tr>
 <tr><td class="name">MR. LEE ZHENG HAN</td><td class="table">56</td></tr>
+<tr><td class="name">MR. LEE ZHENG LIANG</td><td class="table">56</td></tr>
 <tr><td class="name">MR. JIA WEI</td><td class="table">55</td></tr>
 <tr><td class="name">MR. VINCENT</td><td class="table">58</td></tr>
 <tr><td class="name">MS. WINNIE &amp; MOTHER</td><td class="table">51</td></tr>
@@ -557,7 +559,7 @@
 <tr><td class="name">DR. CHAN TIONG CHENG</td><td class="table">28</td></tr>
 <tr><td class="name">堂姐夫 李得生夫妇</td><td class="table">1</td></tr>
 <tr><td class="name">MS. DORIS LEE</td><td class="table">16</td></tr>
-<tr><td class="name">MS. JENNY WONG</td><td class="table">60</td></tr>
+<tr><td class="name">MS. JENNY WONG</td><td class="table">56</td></tr>
 <tr><td class="name">黄德双夫妇</td><td class="table">61</td></tr>
 <tr><td class="name">金湶發（馬）有限公司</td><td class="table">10</td></tr>
 <tr><td class="name">邓子龙先生</td><td class="table">38</td></tr>
