--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 <tr><td class="name">MS. LILY TAN</td><td class="table">13</td></tr>
 <tr><td class="name">MS. JOANNA YONG</td><td class="table">13</td></tr>
 <tr><td class="name">MR &amp; MRS. LIM KIM LIN</td><td class="table">26</td></tr>
-<tr><td class="name">MS. JOANNE LAI</td><td class="table">56</td></tr>
+<tr><td class="name">MS. JOANNE LAI</td><td class="table">60</td></tr>
 <tr><td class="name">MR &amp; MRS. CASSIDY KHOO</td><td class="table">59</td></tr>
 <tr><td class="name">LO CHIN TUCK &amp; SIBLINGS</td><td class="table">1</td></tr>
 <tr><td class="name">陈凯文夫妇</td><td class="table">31</td></tr>
@@ -414,7 +414,7 @@
 <tr><td class="name">MR. LIM CHUN TAK</td><td class="table">68</td></tr>
 <tr><td class="name">MR. YONG LE</td><td class="table">68</td></tr>
 <tr><td class="name">MR. YWEI</td><td class="table">68</td></tr>
-<tr><td class="name">MR. TAN ZHANG HAO</td><td class="table">56</td></tr>
+<tr><td class="name">MR. TAN ZHANG HAO &amp; GIRLFRIEND</td><td class="table">56</td></tr>
 <tr><td class="name">MR. CHONG JIA XIAN</td><td class="table">56</td></tr>
 <tr><td class="name">MR. IVAN CHOO</td><td class="table">56</td></tr>
 <tr><td class="name">MR FELIX EE &amp; GIRLFRIEND</td><td class="table">56</td></tr>
@@ -518,7 +518,7 @@
 <tr><td class="name">姚佳佳小姐</td><td class="table">37</td></tr>
 <tr><td class="name">葉汶銘夫妇</td><td class="table">29</td></tr>
 <tr><td class="name">吴明威夫妇</td><td class="table">23</td></tr>
-<tr><td class="name">美成贸易公司</td><td class="table">10</td></tr>
+<tr><td class="name">美成贸易公司</td><td class="table">12</td></tr>
 <tr><td class="name">楊金坤先生 阖府统请</td><td class="table">21</td></tr>
 <tr><td class="name">黄鈺喜夫妇</td><td class="table">66</td></tr>
 <tr><td class="name">YB 萧妙光</td><td class="table">25</td></tr>
@@ -582,6 +582,7 @@
 <tr><td class="name">蔡明光先生</td><td class="table">69</td></tr>
 <tr><td class="name">林玉珠女士</td><td class="table">69</td></tr>
 <tr><td class="name">黄聪荣夫妇</td><td class="table">60</td></tr>
+<tr><td class="name">福华行</td><td class="table">11</td></tr>
       </tbody>
     </table>
   </div>
